--- a/_posts/2023-11-30-fibotester.html
+++ b/_posts/2023-11-30-fibotester.html
@@ -7,7 +7,7 @@
         <label for="numberInput">Enter a number:</label>
         <input type="number" id="numberInput" placeholder="Enter a number">
         <button id="calculateButton" onclick="read_pull()">Calculate Fibonacci</button>
-        <title>Fibonacci - Live Updating Table</title>
+        <title>Fibonacci - Testing Frontend</title>
         <style>
           table {
             border-collapse: collapse;
