--- a/_posts/2024-01-18-signup.html
+++ b/_posts/2024-01-18-signup.html
@@ -1,3 +1,4 @@
+{%- include nbaheader.html -%}
 
 <body>
     <section>
@@ -143,7 +144,7 @@ section{
     width: 100%;
     background-position: center;
     background-size: cover;
-    background-color: black;
+    background-color: #FFFFED;
 }
 
 .signin-box{
@@ -151,7 +152,7 @@ section{
     width: 400px;
     height: 450px;
     background: transparent;
-    border: 2px solid rgba(255, 255, 255, 0.5);
+    border: 2px solid rgba(204, 128, 128, 0.5);
     border-radius: 20px;
     backdrop-filter: blur(15px);
     display: flex;
@@ -161,7 +162,7 @@ section{
 
 h2{
     font-size: 2em;
-    color: white;
+    color: black;
     text-align: center;
 }
 
@@ -174,7 +175,7 @@ form{
     position: relative;
     margin: 30px 0;
     width: 310px;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid black;
 }
 
 .inputbox label {
@@ -182,7 +183,7 @@ form{
     top: 50%;
     left: 5px;
     transform: translateY(-50%);
-    color: white;
+    color: black;
     font-size: 1em;
     pointer-events: none;
     transition: 0.5s;
@@ -200,13 +201,13 @@ input:valid ~ label{
     outline: none;
     font-size: 1em;
     padding:0 35px 0 5px;
-    color: white;
+    color: black;
 }
 
 .inputbox ion-icon{
     position: absolute;
     right: 8px;
-    color: white;
+    color: black;
     font-size: 1.2em;
     top: 20px;
 }
@@ -215,7 +216,7 @@ button{
     width: 100%;
     height: 40px 0;
     border-radius: 40px;
-    background: white;
+    background: #cc8080;
     border: none;
     outline: none;
     font-size: 1em;
@@ -225,14 +226,14 @@ button{
 
 .accountexist{
     font-size: 0.9em;
-    color: white;
+    color: black;
     text-align: center;
     margin: 25px 0 ;
 }
 
 .accountexist p a{
     text-decoration: none;
-    color: white;
+    color: black;
     font-weight: 600;
 }
 
@@ -242,14 +243,14 @@ button{
 
 .goback{
     font-size: 0.9em;
-    color: white;
+    color: black;
     text-align: center;
     margin: 25px 0 ;
 }
 
 .goback p a{
     text-decoration: none;
-    color: white;
+    color: black;
     font-weight: 600;
 }
 
