--- a/_posts/2024-01-17-signin.html
+++ b/_posts/2024-01-17-signin.html
@@ -180,6 +180,14 @@
     padding: 0;
 }
 
+.banner{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)),url(background.jpg);
+    background-size: cover;
+    background-position: cover;
+  }
+
 section{
     display: flex;
     justify-content: center;
